--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,8 @@
     border: 5px solid black;
 }
 
-
-
 img {
     height: 100px;
-    border: 5px solid red;
 }
 
 .currInfo {
@@ -18,45 +15,41 @@ img {
     width: 100%;
     height: 100%;
     grid-template-columns: 33% 33% 33%;
-    border: 5px solid blue;
 }
 
 .ticker {
     height: 100%;
     width: 100%;
-    border: 5px solid yellow;
 }
 
 .price {
     height: 100%;
     width: 100%;
-    border: 5px solid yellow;
 }
 
 .percentChange {
     height: 100%;
     width: 100%;
-    border: 5px solid yellow;
 }
 
 .newsStories {
     display: grid;
-    grid-template-rows: 20% 70%;
+    grid-template-rows: auto auto;
     height: 100%;
     width: 100%;
-    border: 5px solid blue;
     overflow-y:auto; 
 }
 
 .newsArticle {
-    display: inline
+    width: 100%;
+    margin-top: 25px;
 }
 
-.newsStories .publisher {
-    border: .5em solid yellow;
+.newsArticle .publisher {
+    width: 100%;
+    margin-top: 25px;
 }
 
-.newsStories a {
-    height: 100px;
-    border: .5em solid blue;
+.newsArticle a {
+    width: 100%;
 }
